<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    android:weightSum="3.66" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="2.42"
        android:background="@drawable/round_trans_white"
        android:gravity="bottom"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0.5"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/textview_update_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/str_select_phone"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="0.01"
            android:background="@color/blue_trans"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0.5"
            android:orientation="vertical" >

            <Button
                android:id="@+id/dm_phone1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_phone_selector"
                android:text="@string/str_contact_number1"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="0.01"
            android:background="@color/blue_trans"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0.5"
            android:orientation="vertical" >

            <Button
                android:id="@+id/dm_phone2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_phone_selector"
                android:text="@string/str_contact_number2"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="normal" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="0.1"
        android:gravity="bottom"
        android:orientation="vertical" >

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical" >

        <Button
            android:id="@+id/dmcancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_cancel"
            android:text="@string/str_cancel"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="normal|bold" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="0.1"
        android:gravity="bottom"
        android:orientation="vertical" >

    </LinearLayout>

</LinearLayout>