<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back_contactus" >

    <RelativeLayout
        android:id="@+id/relativeLayout_title"
        android:layout_width="match_parent"
        android:layout_height="60dp" >

        <TextView
            android:id="@+id/textView_cover_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/str_contact_us"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white" />

    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/relativeLayout_about_us"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/relativeLayout_title"
        android:layout_marginRight="150dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/menu_selector" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="60dp"
            android:text="@string/str_about_us"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="@color/white" >
        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout_phone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/relativeLayout_about_us"
        android:layout_below="@+id/relativeLayout_about_us"
        android:layout_marginTop="10dp"
        android:background="@drawable/menu_selector" >

        <TextView
            android:id="@+id/textView_menu2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="60dp"
            android:text="@string/str_phone"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="@color/white" >
        </RelativeLayout>
        
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/relativeLayout_phone"
        android:layout_below="@+id/relativeLayout_phone"
        android:layout_marginTop="10dp"
        android:background="@drawable/menu_selector" >

        <TextView
            android:id="@+id/textView_menu3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="60dp"
            android:text="@string/str_email"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="@color/white" >
        </RelativeLayout>
        
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout_map"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/relativeLayout_email"
        android:layout_below="@+id/relativeLayout_email"
        android:layout_marginTop="10dp"
        android:background="@drawable/menu_selector" >

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="60dp"
            android:text="@string/str_map"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="@color/white" >
        </RelativeLayout>
        
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout_bottom"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/black" >

        <Button
            android:id="@+id/button_back"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:background="@drawable/button_back"
            android:minHeight="20dp"
            android:minWidth="20dp" />

        <Button
            android:id="@+id/button_home"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/button_home"
            android:minHeight="50dp"
            android:minWidth="50dp" />

    </RelativeLayout>

</RelativeLayout>